--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongodb": "^4.13.0",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-query": "^3.39.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
