--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "cors": "^2.8.5",
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.1",
     "mongodb": "^4.13.0",
