--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@next/font": "13.1.1",
     "cors": "^2.8.5",
     "daisyui": "^2.47.0",
-    "eslint": "8.31.0",
+    "eslint": "^8.31.0",
     "eslint-config-next": "13.1.1",
     "mongodb": "^4.13.0",
     "next": "13.1.1",
