--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@next/font": "13.1.1",
@@ -17,12 +18,14 @@
     "mongodb": "^4.13.0",
     "next": "13.1.1",
     "next-seo": "^5.15.0",
+    "next-sitemap": "^3.1.47",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-query": "^3.39.2"
   },
   "devDependencies": {
+    "@types/react": "18.0.27",
     "autoprefixer": "^10.4.13",
     "mongoose": "^6.8.3",
     "postcss": "^8.4.21",
